# artex

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  artex.pc.in  config.cmake  database-state-architecture.md  eip_4844_todo.md  frontier_test_results.txt  setup.sh  test_art_bug  test_art_simple  todo-checklist.md
.claude/: settings.json
common/include/: address.h  bytes.h  hash.h  keccak256.h  keccak256_avx2.h  keccak256_avx512.h  logger.h  rlp.h  snappy_decode.h  uint128.h  uint256.h
common/src/: address.c  bytes.c  hash.c  hkdf.c  keccak256.c  keccak256_avx2.c  keccak256_avx512.c  logger.c  rlp.c  secp256k1_wrap.c  snappy_decode.c  uint256.c
common/tests/: bench_keccak_all.c  bench_keccak_avx2.c  fuzz_keccak.c  test_address.c  test_byte_conv.c  test_bytes.c  test_hash.c  test_keccak256.c  test_keccak_avx2.c  test_logger.c  test_rlp.c  test_uint256_div.c  test_uint256_ops.c
data/: download_era1.sh  mainnet_genesis.json  repair_era.sh
database/: ART_DEVELOPMENT.md  ART_MPT_MAPPING.md  BUGS_AND_IMPROVEMENTS.md  CHECKPOINT.md  CHECKPOINT_DESIGN.md  COMPRESSION.md  CONCURRENCY.md  DATA_LAYER_DESIGN.md  DEVELOPMENT_PLAN.md  DISK_HASH_PRODUCTION.md  ERROR_HANDLING.md  FIXED_SIZE_KEYS.md  INDEX_ARCHITECTURE.md  INTERMEDIATE_HASHES.md  MVCC_VERSION_CHAINS.md  OPTIMIZATION_OPPORTUNITIES.md  PAGE_ALLOCATION.md  PERSISTENCE.md  PROOF_GENERATION.md  ROOT_POINTER_PERSISTENCE.md  STATE_ROOT_JOURNEY.md  STORAGE_ARCHITECTURE.md  TODO.md  TODO_VERKLE_STORAGE.md  WRITE_SCALABILITY.md
database/docs/: persistent_art.md
database/include/: account.h  account_trie.h  arena.h  art.h  art_iface.h  art_mpt.h  art_store.h  bitmap_art.h  block_store.h  bloom_filter.h  buffer_pool.h  checkpoint.h  checkpoint_manager.h  code_store.h  compact_art.h  crc32.h  data_art.h  data_layer.h  db_backup.h  db_compaction.h  db_error.h  disk_hash.h  disk_table.h  evm_state.h  flat_index.h  flat_state.h  flat_store.h  hart_pool.h  hash_store.h  hashed_art.h  ih_hash_store.h  intermediate_hashes.h  logger.h  mem_art.h  mem_mpt.h  mmap_storage.h  mpt.h  mpt_arena.h  mpt_store.h  mpt_trie.h  (+18 more)
database/src/: account.c  account_trie.c  arena.c  art.c  art_iface_compact.c  art_iface_mem.c  art_mpt.c  art_store.c  bitmap_art.c  block_store.c  bloom_filter.c  buffer_pool.c  checkpoint.c  checkpoint_manager.c  code_store.c  compact_art.c  crc32.c  data_art_batch.c  data_art_compact.c  data_art_core.c  data_art_delete.c  data_art_insert.c  data_art_iterator.c  data_art_node_ops.c  data_art_overflow.c  data_art_search.c  data_layer.c  db_backup.c  db_compaction.c  db_error.c  disk_hash.c  disk_hash_mmap.c  disk_table.c  evm_state.c  flat_index.c  flat_state.c  flat_store.c  hart_pool.c  hash_store.c  hashed_art.c  (+26 more)
database/tests/: bench_art_store_scale.c  bench_compact_art_index.c  bench_dual_index.c  bench_hart_avx512.c  bench_hart_disk_cycle.c  bench_hart_hotpath.c  bench_hart_incremental.c  bench_hart_memory.c  bench_hart_profile.c  bench_hart_root.c  bench_hart_scale.c  bench_hash_store.c  bench_lmdb_production.c  bench_mem_art_cache.c  bench_mem_art_index.c  bench_mem_art_storage.c  bench_mpt.c  bench_mpt_trie.c  bench_nibble_trie.c  bench_nt_hash.c  bench_per_block_merge.c  bench_storage_compare.c  bench_storage_hart_scale.c  bench_uthash_vs_art.c  benchmark_comparison.c  benchmark_data_art.c  gen_mpt_vectors.py  test_account_encoding.c  test_arena.c  test_art.c  test_art_mpt_fuzz.c  test_art_mpt_mem.c  test_art_mpt_vectors.c  test_bitmap_art.c  test_block_store.c  test_bloom_filter.c  test_buffer_pool.c  test_buffer_pool_edge.c  test_checkpoint.c  test_checkpoint_manager.c  (+93 more)
docs/: TODO.md  architecture.md  artex_network.md  block_undo_log.md  cached_accounts.md  chain_replay_testing.md  chain_tip_design.md  diff_fuzz_setup.md  era1_to_cl_transition.md  evm_optimizations.md  execution_flow.md  fast_sync.md  finalize_block_comparison.md  flat_storage_integration.md  hart.md  hart_internals.md  madvise_optimization.md  mpt_checkpoint_optimization.md  mpt_root_flow.md  mpt_root_pipeline.md  mpt_store_storage.md  parallelism.md  per_account_storage.md  per_account_storage_v2.md  per_block_optimizations.md  pipeline_interactions.md  pre_relaunch_todo.md  root_hash_optimization.md  scaling_plan.md  single_threaded_flow.md  state_data_flow.md  storage_eviction.md  storage_hart_pool_design.md  sync_and_debug_strategy.md  sync_overhead.md  tx_pipeline.md  unified_state_store.md  verkle_history.md  verkle_transition.md
engine/: TODO.md
engine/include/: engine.h  engine_handlers.h  engine_http.h  engine_jwt.h  engine_rpc.h  engine_store.h  engine_types.h
engine/src/: engine.c  engine_handlers.c  engine_http.c  engine_jwt.c  engine_rpc.c  engine_store.c  engine_types.c
engine/tests/: test_engine_handlers.c  test_engine_jwt.c  test_engine_rpc.c
era_reader/include/: era1.h
era_reader/src/: era.c
evm/: TODO.md
evm/include/: evm.h  evm_memory.h  evm_stack.h  evm_state.h  evm_tracer.h  fork.h  gas.h  interpreter.h  precompile.h  transaction.h  witness_gas.h
evm/src/: evm.c  evm_memory.c  evm_stack.c  evm_state.c  evm_tracer.c  fork.c  (+5 more)
include/: artex.h
integration_tests/: test_parser_verify.c  test_runner_batch_main.c  test_runner_example.c  test_runner_failfast_main.c
lib/: artex.c  test_artex.c
state/: TODO.md  VERKLE_TREE.md
tools/: artex_node.c  bench_compact_art_mem.c  bench_compare.sh  bench_mpt_store.c  bench_precise.sh  chain_replay.c  compare_post_states.py  compute_state_root.py  continuous_test.py  convert_idx.c  debug_genesis_mpt.py  diff_fuzz.py  disassemble.py  engine_server.c  era1_extract.py  era_extract.py  evm_statetest.c  evm_t8n.c  generate_state_tests.py  hart_determinism_test.c  history_dump.c  history_query.c  history_read.py  make_hashes.py  mock_cl.py  monitor_chain_replay.sh  mpt_fuzz.py  mpt_fuzz_lib.c  mpt_test_vectors.json  node.c  package_snapshot.sh  portal_node.c  profile_mpt_root.c  py_chain_replay.py  rebuild_code_idx.c  rebuild_idx.c  scan_code_store.c  state_migrate.c  state_reconstruct.c  stress_fullstack.c  (+12 more)
verkle/: PERFORMANCE.md
vm/: DESIGN.md
(+251 files in other folders)
